homelab/apps/media/base/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:5.12.2
        ports:
        - containerPort: 7878
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /movies
          name: movies
        - mountPath: /downloads
          name: downloads
      volumes:
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads
      - name: movies
        persistentVolumeClaim:
          claimName: medias
      - name: config
        persistentVolumeClaim:
          claimName: radarr-config
